--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,6 +1,7 @@
 <h1><%= @list.name %></h1>
-
+<%= cl_image_tag @list.photo.key, height: 300, width: 400, crop: :fill %>
 <% @list.bookmarks.each do |bookmark| %>
+
   <p>
     Movie: <%= bookmark.movie.title %><br>
     Comment: <%= bookmark.comment %>
